# coreplug

./: .gitignore  Cargo.toml  plugin_stop  reload
.github/workflows/: rust.yml
src/: abort_tasks_on_drop.rs  event_callbacks.rs  main.rs  plugin_state.rs
src/events/: event_functions.rs  mod.rs
src/server/: constants.rs  mod.rs  validate.rs  websocket.rs
