[package]
name = "coreplug"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
cln-plugin = "0.1.3"
env_logger = "0.10.0"
futures = "0.3.28"
log = "0.4.17"
openssl = "0.10.52"
serde_json = "1.0.96"
tokio = {version = "1.28.0", features = ["full"]}
tokio-tungstenite = "0.18.0"
